Update other languages with maxpeers subsitutions.

--- a/src/freenet/l10n/freenet.l10n.es.properties
+++ b/src/freenet/l10n/freenet.l10n.es.properties
@@ -885,8 +885,8 @@ Node.masterKeyFileLong=Nombre del archivo de claves maestras. Este contiene las 
 Node.maxHTL=HTL máximo
 Node.maxHTLLong=HTL máximo (¡PARA USO DE DESARROLLADORES ÚNICAMENTE!)
 Node.maxOpennetPeers=Numero maximo de conecciones por Opennet
-Node.maxOpennetPeersLong=Número máximo de pares opennet (debe estar entre 0 y 40 incluidos, el límite actual dependerá del número de amigos y tu límite de ancho de banda, y se mostrará en la página de estadísticas).
-Node.maxOpennetPeersMustBeTwentyOrLess=Debe ser veinte o menos
+Node.maxOpennetPeersLong=Número máximo de pares opennet (debe estar entre 0 y ${default} incluidos, el límite actual dependerá del número de amigos y tu límite de ancho de banda, y se mostrará en la página de estadísticas).
+Node.maxOpennetPeersMustBeTwentyOrLess=Debe ser ${maxpeers} o menos
 Node.maxPacketSize=Tamaño máximo del paquete de datos (MTU)
 Node.maxPacketSizeLong=El tamaño máximo de los paquetes UDP que envía Freenet, asumiendo un encabezado UDP/IP de 28 bytes. Usaremos la MTU de la interfaz si podemos detectarla, pero muchos obstáculos pueden ocurrir en cualquier lado, y desafortunadamente no podemos detectar la MTU de la ruta.
 Node.mustBePositive=El valor de configuración debe ser positivo
