--- a/src/freenet/l10n/freenet.l10n.nl.properties
+++ b/src/freenet/l10n/freenet.l10n.nl.properties
@@ -957,8 +957,8 @@ Node.masterKeyFileLong=Bestandsnaam van het hoofdversleutelingsbestand. Dit beva
 Node.maxHTL=Maximale HTL
 Node.maxHTLLong=Maximale HTL (ALLEEN VOOR GEBRUIK DOOR ONTWIKKELAARS)
 Node.maxOpennetPeers=Maximum aantal Opennet peers
-Node.maxOpennetPeersLong=Maximaal aantal Opennet peers (moet tussen de 0 en 35 liggen, de bovengrens hangt af van het aantal Vrienden en de beschikbare bandbreedte en zal op de Statistieken-pagina worden weergegeven)
-Node.maxOpennetPeersMustBeTwentyOrLess=Moet 20 zijn of minder
+Node.maxOpennetPeersLong=Maximaal aantal Opennet peers (moet tussen de 0 en ${default} liggen, de bovengrens hangt af van het aantal Vrienden en de beschikbare bandbreedte en zal op de Statistieken-pagina worden weergegeven)
+Node.maxOpennetPeersMustBeTwentyOrLess=Moet ${maxpeers} zijn of minder
 Node.maxPacketSize=Maximale pakketgrootte (i.e. MTU)
 Node.maxPacketSizeLong=Maximale groote van de UDP paketten die Freenet verstuurd, aangenomen dat UDP/IP headers 28 bytes bedragen. We zullen de pad MTU van de netwerkinterface gebruiken als we deze kunnen detecteren, maar meestal is er iets wat dit in de weg staat.
 Node.mustBePositive=Configuratiewaarde moet een positieve waarde hebben
