--- a/src/freenet/l10n/freenet.l10n.ru.properties
+++ b/src/freenet/l10n/freenet.l10n.ru.properties
@@ -1062,8 +1062,8 @@ Node.masterKeyFileLong=Имя ключевого файла, который со
 Node.maxHTL=Максимум HTL
 Node.maxHTLLong=Максимум HTL (ТОЛЬКО ДЛЯ РАЗРАБОТЧИКОВ!)
 Node.maxOpennetPeers=Максимальное число подключенных узлов опеннет
-Node.maxOpennetPeersLong=Максимальное число подключенных узлов опеннет (должно быть от 0 до 40 включительно, но зависит от числа друзей и скорости сетевого подключения, действительное число узлов можно посмотреть на странице статистики).
-Node.maxOpennetPeersMustBeTwentyOrLess=Должно быть около 40 или ниже
+Node.maxOpennetPeersLong=Максимальное число подключенных узлов опеннет (должно быть от 0 до ${default} включительно, но зависит от числа друзей и скорости сетевого подключения, действительное число узлов можно посмотреть на странице статистики).
+Node.maxOpennetPeersMustBeTwentyOrLess=Должно быть около ${maxpeers} или ниже
 Node.maxPacketSize=Максимальный размер пакета (MTU)
 Node.maxPacketSizeLong=Максимальный размер пакетов UDP, отправляемых Фринетом, предполагая что в заголовке  UDP/IP пакета 28 байт. Будет использован MTU сетевого интерфейса, если удастся его определить, однако, в случае затруднений, path MTU может быть не определен.
 Node.mustBePositive=Значение параметра должно быть выше нуля
