--- a/src/freenet/l10n/freenet.l10n.se.properties
+++ b/src/freenet/l10n/freenet.l10n.se.properties
@@ -537,8 +537,8 @@ Node.l10nLanguage=Språk
 Node.l10nLanguageLong=Den här inställningen ändrar språket som meddelanden visas i. Vissa översättningar kommer inte att göras förrän noden har startats om.
 Node.maxHTL=Max HTL
 Node.maxOpennetPeers=Maximalt antal Opennet noder
-Node.maxOpennetPeersLong=Maximalt antal Opennet noder (ska vara mellan 0 till och med 20, antalet anslutningar till vänner kommer dras bort från det inställda värdet)
-Node.maxOpennetPeersMustBeTwentyOrLess=Får ej vara över 20
+Node.maxOpennetPeersLong=Maximalt antal Opennet noder (ska vara mellan 0 till och med ${default}, antalet anslutningar till vänner kommer dras bort från det inställda värdet)
+Node.maxOpennetPeersMustBeTwentyOrLess=Får ej vara över ${maxpeers}
 Node.mustBePositive=Värdet måste vara positivt
 Node.nodeDir=Nod mapp
 Node.nodeDirLong=Mapp där nodrelaterade filer sparas.
