--- a/src/freenet/l10n/freenet.l10n.zh-cn.properties
+++ b/src/freenet/l10n/freenet.l10n.zh-cn.properties
@@ -868,8 +868,8 @@ Node.masterKeyFileLong=主密匙文件的文件名。它包含了用于加密最
 Node.maxHTL=最大 HTL 值
 Node.maxHTLLong=最大 HTL 值 (只限开发者使用!)
 Node.maxOpennetPeers=Opennet 节点最大数量
-Node.maxOpennetPeersLong=Opennet 节点最大数量 (必须在 0-40 之间，实际的限制会依据好友数量以及您的带宽限制，且会显示在统计页面)。
-Node.maxOpennetPeersMustBeTwentyOrLess=必须小于等于 40
+Node.maxOpennetPeersLong=Opennet 节点最大数量 (必须在 0-${default} 之间，实际的限制会依据好友数量以及您的带宽限制，且会显示在统计页面)。
+Node.maxOpennetPeersMustBeTwentyOrLess=必须小于等于 ${maxpeers}
 Node.mustBePositive=设定值必须是正数
 Node.nodeDir=节点信息目录
 Node.nodeDirLong=节点相关信息 (例如节点身份、其它节点等) 的储存目录。
