Add maxpeers substitution for German too.

--- a/src/freenet/l10n/freenet.l10n.de.properties
+++ b/src/freenet/l10n/freenet.l10n.de.properties
@@ -1062,7 +1062,7 @@ Node.maxHTL=Maximale HTL
 Node.maxHTLLong=Maximale HTL (NUR FÜR ENTWICKLUNGS-ZWECKE BENUTZEN!)
 Node.maxOpennetPeers=Maximale Anzahl an Opennet-Partnern
 Node.maxOpennetPeersLong=Maximale Anzahl an Opennet-Partnern (muss zwischen 0 und ${default} (inklusive) liegen. Sie hängt von der Anzahl an Freunden ab, sowie von der maximalen Netzwerk-Bandbreite. Gezeigt wird sie auf der Statistik-Seite (http://127.0.0.1:8888/stats/). Etwaige Darknet-Verbindungen (Freunde) werden vom Gesamt-Limit abgezogen.
-Node.maxOpennetPeersMustBeTwentyOrLess=Muss 40 oder weniger sein
+Node.maxOpennetPeersMustBeTwentyOrLess=Muss ${maxpeers} oder weniger sein
 Node.maxPacketSize=Maximale Paket-Größe (MTU)
 Node.maxPacketSizeLong=Maximale Größe der UDP-Pakete, die Freenet sendet. Wir gehen dabei von einer Größe des UDP/IP-Vorspanns von 28 Bytes aus. Wir werden die MTU (Maximal Tramission Unit) Ihres Netzwerks-Interfaces verwenden, wenn wir diese detektieren können. Die meisten Hindernisse dabei passieren aber woanders und unglücklicherweise können wir nicht auf einfache Weise die MTU des gesamten Pfades detektieren.
 Node.mustBePositive=Der Konfigurations-Wert muss positiv sein
