Localise plugin names. Will be needed for Freemail v0.2.

--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -1401,6 +1401,24 @@ PproxyToadlet.pluginDesc.Spider=Tool to create and automatically upload new form
 PproxyToadlet.pluginDesc.Freetalk=Experimental anonymous forum. Currently has severe performance and reliability problems. Requires WebOfTrust.
 PproxyToadlet.pluginDesc.WebOfTrust=Allows you to create an anonymous identity. These identities can trust each other, or not, and hence avoid spam and DoS attacks. Backend for chat and social applications over Freenet.
 PproxyToadlet.pluginDesc.FlogHelper=Easy to use tool for creating a blog on Freenet. Requires WebOfTrust.
+PproxyToadlet.pluginName.Freemail=Freemail
+PproxyToadlet.pluginName.HelloWorld=HelloWorld
+PproxyToadlet.pluginName.HelloFCP=HelloFCP
+PproxyToadlet.pluginName.JSTUN=JSTUN
+PproxyToadlet.pluginName.KeyUtils=KeyUtils
+PproxyToadlet.pluginName.MDNSDiscovery=MDNSDiscovery
+PproxyToadlet.pluginName.SNMP=SNMP
+PproxyToadlet.pluginName.TestGallery=TestGallery
+PproxyToadlet.pluginName.ThawIndexBrowser=ThawIndexBrowser
+PproxyToadlet.pluginName.UPnP=UPnP
+PproxyToadlet.pluginName.XMLLibrarian=XMLLibrarian
+PproxyToadlet.pluginName.XMLSpider=XMLSpider
+PproxyToadlet.pluginName.Freereader=Freereader
+PproxyToadlet.pluginName.Library=Library
+PproxyToadlet.pluginName.Spider=Spider
+PproxyToadlet.pluginName.Freetalk=Freetalk
+PproxyToadlet.pluginName.WebOfTrust=WebOfTrust
+PproxyToadlet.pluginName.FlogHelper=FlogHelper
 PproxyToadlet.pluginFilename=Name
 PproxyToadlet.pluginGroup.communication=Communication
 PproxyToadlet.pluginGroup.connectivity=Connectivity
