Improve wording for no node name alert.

--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -943,9 +943,9 @@ LogConfigHandler.rotationInterval=Log rotation interval
 LogConfigHandler.rotationIntervalLong=Log rotation interval - period after which logs are rotated. We keep the last two log files (current and prev), plus lots of compressed logfiles up to maxZippedLogsSize
 LoggerHook.unrecognizedPriority=Unrecognised priority name: ${name}.
 LongOption.parseError=The value specified can't be parsed as a 64-bit integer : ${val}
-MeaningfulNodeNameUserAlert.noNodeNick=It seems that your node doesn't know your nickname. Putting your e-mail address or IRC nickname here is generally speaking a good idea and helps your friends to identify your node (note that only your darknet peers listed on the friends page can see your node name, it will not be displayed to strangers).
-MeaningfulNodeNameUserAlert.noNodeNickTitle=Your node name isn't defined.
-MeaningfulNodeNameUserAlert.noNodeNickShort=Your node name isn't defined.
+MeaningfulNodeNameUserAlert.noNodeNick=Please set a name for your node so that your friends can identify your node, e.g. if you send them a message or a file. This will only be visible to your Friends who you manually connect to via the Add a Friend page, and possibly to their Friends. Your node's nickname will not be visible to strangers, that is, Freenet connections added automatically in the lower security levels.
+MeaningfulNodeNameUserAlert.noNodeNickTitle=Please set a name for your Freenet node.
+MeaningfulNodeNameUserAlert.noNodeNickShort=Please set a name for your Freenet node.
 MP3Filter.bogusMP3NoFrames=Doesn't look like an MP3.
 MP3Filter.bogusMP3NoFramesExplanation=This does not look like an MP3 file. It might be corrupt or somebody might be trying to mask some other kind of (potentially dangerous) file as an mp3 file to breach your anonymity.
 MP3Filter.freeBitrateNotSupported=Free bitrate MP3 files not supported by filter
