--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -1410,7 +1410,8 @@ PproxyToadlet.loadOtherPluginText=Here you can enter the filename or internet ad
 PproxyToadlet.loadOtherURLLabel=Plugin URL
 PproxyToadlet.noPlugins=No plugins loaded
 PproxyToadlet.noVersion=N/A
-PproxyToadlet.pluginDesc.Freemail=Email over Freenet. Requires an email client (e.g. Thunderbird).
+PproxyToadlet.pluginDesc.Freemail=Old version (v0.1) of email over Freenet. Requires an email client (e.g. Thunderbird). The only reason to install this is if you want to talk to people using the old Freemail, since the new Freemail isn't compatible with the old Freemail.
+PproxyToadlet.pluginDesc.Freemail_wot=Email over Freenet. Requires the WebOfTrust plugin. Has a basic web interface, or you can use an email client; see FSNG for details on how to set this up.
 PproxyToadlet.pluginDesc.HelloWorld=Test plugin. Does nothing useful, only for developers of new plugins.
 PproxyToadlet.pluginDesc.HelloFCP=FCP test plugin. Does nothing useful, only for developers of new plugins.
 PproxyToadlet.pluginDesc.JSTUN=Uses centralised STUN servers to detect your IP address and connectivity. It is important, especially on darknet, for Freenet to know what your IP address is (but it may be able to pick it up from your peers, especially if you have a lot of connections or are using opennet). STUN is used by other applications but this is centralised so could be used to find your node. If you can use UPnP instead then do so, but if UPnP can't find your IP address reliably you could load this as well.
@@ -1428,7 +1429,8 @@ PproxyToadlet.pluginDesc.Spider=Tool to create and automatically upload new form
 PproxyToadlet.pluginDesc.Freetalk=Experimental anonymous forum. Currently has severe performance and reliability problems. Requires WebOfTrust.
 PproxyToadlet.pluginDesc.WebOfTrust=Allows you to create an anonymous identity. These identities can trust each other, or not, and hence avoid spam and DoS attacks. Backend for chat and social applications over Freenet.
 PproxyToadlet.pluginDesc.FlogHelper=Easy to use tool for creating a blog on Freenet. Requires WebOfTrust.
-PproxyToadlet.pluginName.Freemail=Freemail
+PproxyToadlet.pluginName.Freemail=Freemail v0.1 (old!)
+PproxyToadlet.pluginName.Freemail_wot=Freemail
 PproxyToadlet.pluginName.HelloWorld=HelloWorld
 PproxyToadlet.pluginName.HelloFCP=HelloFCP
 PproxyToadlet.pluginName.JSTUN=JSTUN
