Important note: can have both.

--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -1410,7 +1410,7 @@ PproxyToadlet.loadOtherPluginText=Here you can enter the filename or internet ad
 PproxyToadlet.loadOtherURLLabel=Plugin URL
 PproxyToadlet.noPlugins=No plugins loaded
 PproxyToadlet.noVersion=N/A
-PproxyToadlet.pluginDesc.Freemail=Old version (v0.1) of email over Freenet. Requires an email client (e.g. Thunderbird). The only reason to install this is if you want to talk to people using the old Freemail, since the new Freemail isn't compatible with the old Freemail.
+PproxyToadlet.pluginDesc.Freemail=Old version (v0.1) of email over Freenet. Requires an email client (e.g. Thunderbird). The only reason to install this is if you want to talk to people using the old Freemail, since the new Freemail isn't compatible with the old Freemail. Note that you can have both loaded at the same time as they use different ports to talk to your email client.
 PproxyToadlet.pluginDesc.Freemail_wot=Email over Freenet. Requires the WebOfTrust plugin. Has a basic web interface, or you can use an email client; see FSNG for details on how to set this up.
 PproxyToadlet.pluginDesc.HelloWorld=Test plugin. Does nothing useful, only for developers of new plugins.
 PproxyToadlet.pluginDesc.HelloFCP=FCP test plugin. Does nothing useful, only for developers of new plugins.
