Improve l10n title for friend addition confirmation page

--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -430,7 +430,7 @@ DarknetConnectionsToadlet.unknownAddress=(unknown address)
 DarknetConnectionsToadlet.updateChangedPrivnotes=Update changed private notes
 DarknetConnectionsToadlet.urlReference=OR enter the URL of the node reference here:
 DarknetConnectionsToadlet.versionTitle=Version
-DarknetConnectionsToadlet.reportOfNodeAddition=Report of node additions
+DarknetConnectionsToadlet.reportOfNodeAddition=Added some Friends
 DarknetConnectionsToadlet.returnToPrevPage=Return to previous page
 DarknetConnectionsToadlet.peerAdditionCode.OK=Added successfully
 DarknetConnectionsToadlet.peerAdditionCode.TRY_TO_ADD_SELF=Tried to add self
